# PythonInCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  network.py  tf-python.py
docker/: Dockerfile
python/: CMakeLists.txt  python.h.in  run_session.py  test_tf.py
src/: test.cpp
yaml/: example.yaml  test.yaml
